--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,23 @@ nav {
 }
 
 @media (max-width: 500px) {
+  nav {
+padding: 0 20px;
 
-  
+  }
+  .navbar .logo {
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2px;
+    font-size: 1.8rem;
+  }
+  #search-input {
+  width: 150px;
+  padding: 10px 10px;
+  }
+
+
+  .blog-card {
+    width: 100%;
+}
 }
